language/move-lang/tests/move_check/typing/block_with_statements_invalid.exp
error: 

   ┌── tests/move_check/typing/block_with_statements_invalid.move:4:20 ───
   │
 4 │         ({ let x = 0; x } : bool);
   │                             ^^^^ Invalid type annotation
   ·
 4 │         ({ let x = 0; x } : bool);
   │                    - The type: 'u64'
   ·
 4 │         ({ let x = 0; x } : bool);
   │                             ---- Is is not compatible with: 'bool'
   │

error: 

   ┌── tests/move_check/typing/block_with_statements_invalid.move:5:24 ───
   │
 5 │         ({ let x = 0; &x } : u64);
   │                              ^^^ Invalid type annotation
   ·
 5 │         ({ let x = 0; &x } : u64);
   │                        - The type: '&u64'
   ·
 5 │         ({ let x = 0; &x } : u64);
   │                              --- Is is not compatible with: 'u64'
   │

error: 

   ┌── tests/move_check/typing/block_with_statements_invalid.move:6:28 ───
   │
 6 │         ({ let y = 0; &mut (y + 1) } : ());
   │                                        ^^ Invalid type annotation
   ·
 6 │         ({ let y = 0; &mut (y + 1) } : ());
   │                            ------- The type: '&mut u64'
   ·
 6 │         ({ let y = 0; &mut (y + 1) } : ());
   │                                        -- Is is not compatible with: '()'
   │

error: 

   ┌── tests/move_check/typing/block_with_statements_invalid.move:2:5 ───
   │
 7 │         ({ let r = { let r = R {}; r }; r } : R);
   │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Cannot ignore resource values. The value must be used
   ·
 2 │     resource struct R {}
   │     -------- 0000000000000000000000000000000000000000000000000000000008675309.M.R is found to be a non-copyable type here
   │

error: 

   ┌── tests/move_check/typing/block_with_statements_invalid.move:8:23 ───
   │
 8 │         ({ let x = 0; (x, false, false) } : (u64, bool));
   │                                             ^^^^^^^^^^^ Invalid type annotation
   ·
 8 │         ({ let x = 0; (x, false, false) } : (u64, bool));
   │                       ----------------- The type: '(u64,bool,bool)'
   ·
 8 │         ({ let x = 0; (x, false, false) } : (u64, bool));
   │                                             ----------- Is is not compatible with: '(u64,bool)'
   │

